alignment issue fixed in widgets

--- a/server-monitoring/src/app/environment/manager/widgets/progress-bars/environment-manager-widgets-progress-bars.component.scss
+++ b/server-monitoring/src/app/environment/manager/widgets/progress-bars/environment-manager-widgets-progress-bars.component.scss
@@ -7,7 +7,11 @@
                 .k-master-row {
                     .k-table-td {
                         border-bottom-width: 0px;
+                        &:nth-child(even) {
+                            width: 3.4rem !important;
+                        }
                     }
+                    
                 }
             }
         }
